# packer-ng-plugin

./: .gitignore  _config.yml  build.gradle  compatibility.md  deploy-local.sh  deploy-remote.sh  gradle-mvn-push.gradle  gradle.properties  gradlew  huge_markets_test.py  index.html  index.md  local.properties  markets.txt  params.json  readme.md  settings.gradle  test-build.sh  test-market.sh  test_huge_markets.py
app/: android.keystore  build.gradle  local.properties
app/src/main/: AndroidManifest.xml
channels/: channels.txt  free.txt  paid.txt
cli/: build.gradle  gradle.properties
common/: build.gradle  gradle.properties
docs/: index.md
gradle/wrapper/: gradle-wrapper.properties
helper/: build.gradle  gradle.properties
helper/src/main/: AndroidManifest.xml
plugin/: build.gradle  gradle.properties
plugin/src/main/groovy/com/mcxiaoke/packer/: AndroidPackerExtension.groovy  AndroidPackerPlugin.groovy  ArchiveApkBuildTypeTask.groovy  ArchiveApkVariantTask.groovy  CleanArchivesTask.groovy  ModifyManifestTask.groovy  ProcessMetaDataTask.groovy
plugin/src/test/: market.txt
sample/: .gitignore  a.xml  build.gradle  custom.txt  gradle.properties  markets.txt  packer.properties
sample/src/main/: AndroidManifest.xml
sample/src/main/res/layout/: act_main.xml
sample/src/main/res/values/: strings.xml
tools/: PackerNg-1.0.6.py  PackerNg-1.0.7.py  PackerNg-1.0.9.py  apkinfo.py  build.sh  ngpacker.py  packer-ng-v2.py  packer-ng.py  read.c
tools/src/: CMakeLists.txt  Makefile  read.c
ziputils/: build.gradle  gradle.properties
(+55 files in other folders)
